--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,9 @@
+codecov:
+  require_ci_to_pass: false
+  notify:
+    after_n_builds: 2
+    wait_for_ci: no
+
 ignore:
   - "benchmark/"
   - "build/" 
