Explicit comment behaviour.

--- a/codecov.yml
+++ b/codecov.yml
@@ -18,7 +18,7 @@ coverage:
     range: "50...75"
 
 comment:
-    behavior: default       # if a new commit is made, update the old comment if it exists, otherwise make a new one.
+    behavior: once       # if a new commit is made, update the old comment if it exists, otherwise make a new one.
     require_changes: false  # Always post a comment, even if coverage stayed the same.
     require_base: no        # Always post, even without a base to compare.
     require_head: no        # Always post, even without a head to compare.
