--- a/python/rocrand/setup.cfg
+++ b/python/rocrand/setup.cfg
@@ -1,7 +1,7 @@
 [build_sphinx]
-source-dir = docs/source
-build-dir  = docs/build
+source-dir = ../../docs/
+build-dir  = ../../docs/_build
 all_files  = 1
 
 [upload_sphinx]
-upload-dir = docs/build/html
+upload-dir = ../../docs/_build/html
