Documentation update for Read the Docs
Standardize rocRAND documentation builds (#319)

Add dependabot config and pin rocm-docs-core (#320)

Co-authored-by: samjwu <samjwu@users.noreply.github.com>

Fix dependabot file structure (#321)

Co-authored-by: samjwu <samjwu@users.noreply.github.com>

Removing redundant files (#326)

Remove build dependency on Git (#327)

The rocRAND project might use Git to download dependencies, but it is
not required if the dependencies are already installed. And, even in
the case that Git is needed to download dependencies, this find_package
call remains unnecessary. The tooling that does the downloads will look
for git itself.

This change was first made in 7f71666d04e6252d7681d4e0360d4c9b70443ebc,
but was reverted by 11cf251f0bb0374d0f1cbe48ffed121b8833d104.

Update version string (#335)

Merge pull request #337 from StreamHPC/fix-docs

Fixed documentation build

Update documentation requirements (#339)

rocm-docs-core==0.13.4

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ include:
     file:
       - /defaults.yaml
       - /deps-cmake.yaml
+      - /deps-docs.yaml
       - /deps-rocm.yaml
       - /deps-nvcc.yaml
       - /gpus-rocm.yaml
@@ -577,19 +578,7 @@ test:doc:
   stage: test
   extends:
     - .rules:test
-  image: sphinxdoc/sphinx-latexpdf:latest
-  needs: []
-  before_script:
-    - apt-get update
-    - apt-get install -y -qq doxygen
-    - pip3 install --user -r $CI_PROJECT_DIR/docs/requirements.txt
-  script:
-    - $CI_PROJECT_DIR/docs/run_doc.sh
-  artifacts:
-    paths:
-      - $CI_PROJECT_DIR/docs/_build
-      - $CI_PROJECT_DIR/docs/docBin
-    expire_in: 1 week
+    - .build:docs
 
 .test:parity:
   stage: test
