--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2022 Advanced Micro Devices, Inc. All rights reserved.
+# Copyright (c) 2022-2023 Advanced Micro Devices, Inc. All rights reserved.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -122,3 +122,7 @@ if(BUILD_LEGACY_BENCHMARK)
   endif()
 endif()
 
+option(BUILD_BENCHMARK_TUNING "Build extra benchmarks for kernel configuration tuning" OFF)
+if(BUILD_BENCHMARK_TUNING)
+  add_subdirectory(tuning)
+endif()
