--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -63,11 +63,15 @@ function(add_test_target test_src is_internal)
     add_executable(${test_name} ${test_src})
     # nvcc/CUDA
     if(HIP_COMPILER STREQUAL "nvcc")
-      set_source_files_properties(${test_name}
-        PROPERTIES
-          LANGUAGE CUDA
-          CUDA_STANDARD 14
-      )
+      set_source_files_properties(${test_name} PROPERTIES LANGUAGE CUDA)
+      if(is_internal)
+        set_source_files_properties(${test_name} PROPERTIES CUDA_STANDARD 17)
+        if(${CMAKE_VERSION} VERSION_LESS "3.18")
+          set_source_files_properties(${test_name} PROPERTIES COMPILE_OPTIONS "-std=c++17")
+        endif()
+      else()
+        set_source_files_properties(${test_name} PROPERTIES CUDA_STANDARD 14)
+      endif()
       set(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
     endif()
     if(is_internal)
