--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,5 @@ updates:
     open-pull-requests-limit: 10
     schedule:
       interval: "daily"
+    allow:
+      - dependency-name: "rocm-docs-core"
