--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -97,7 +97,7 @@ foreach(test_src ${rocRAND_TEST_SRCS})
             target_link_libraries(${test_name} TBB::tbb)
         endif()
     else()
-        if(HIP_COMPILER STREQUAL "hcc" OR HIP_COMPILER STREQUAL "clang")
+        if(HIP_COMPILER STREQUAL "clang")
             target_link_libraries(${test_name} hip::device)
         endif()
     endif()
