--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -447,7 +447,7 @@ test:hip-cpu:
     - cd $CI_PROJECT_DIR/build
     - ./benchmark/benchmark_rocrand_host_api
       --size $[ 512*1024*1024 ]
-      --binary-size
+      --byte-size
       --trials 5
       --benchmark_out_format=json
       --benchmark_out=rocrand_benchmarks_${GPU_TARGET}_${CI_JOB_ID}.json
