--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -8,5 +8,6 @@ on:
 
 jobs:
   call-workflow-passing-data:
+      name: Documentation  
       uses: RadeonOpenCompute/rocm-docs-core/.github/workflows/linting.yml@develop
       
