Develop stream 2023 06 19 updated  (#383)
* Resolve "Implement curandGetDirectionVectors32 and curandGetDirectionVectors64"

* add missing ctest test files to ci artifacts

* remove hiprand

* review comments round 1

* Fix rocRAND CUDA build instructions

* Document how to build rocRAND with a non-standard ROCm installation path

* Add documentation on passing the module path when building for NVIDIA

* Apply rule of 5 in benchmarks

* Make mt19937_engine movable

* Apply rule of 5 to rocrand.hpp

This could be a breaking change for users, but any code that no longer
compiles was probably buggy anyway.

* Apply rule of 5 / 0 to rocrand internal types

* Abort if deallocation fails in random number engines

Abort instead of silently continuing when `hipFree` fails in rng
destructors. `hipFree` should only fail if
1. there is something wrong
with the runtime in which case continuing doesn't really make sense or
2. There is a bug in rocRAND trying to double free or free something
that was not allocated with `hipMalloc`.

This is usually a sign that something went pretty wrong, and probably
other weird failures would follow if we tried to continue anyway.

This makes a test for move construction / assignment in the next commit
sound, so that it does not need to depend on implicitly terminating when
device side memory is used after freeing it.

* Various fixes in rocrand.hpp

- Add missing order setter for rocrand_cpp::threefry4x64_20_engine
- Fix typo in alias name for the mrg31k3p engine in rocrand_cpp
- Fix default ordering for rocrand_cpp::lfsr113_engine

* Test move operations for rocrand_cpp generators

* Add copyright check script based on hipCUB

* Implement device-side initialization of MT19937

* Optimize jump ahead for MT19937

* Replace % n with a simpler wrapping code;
* Change the innermost loop so i < n must be checked only for
  the last iteration, others can be unrolled without if;
* Fix block si

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2018-2022 Advanced Micro Devices, Inc. All rights reserved.
+# Copyright (c) 2018-2023 Advanced Micro Devices, Inc. All rights reserved.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -104,7 +104,7 @@ if (AMDGPU_TARGETS)
     set( AMDGPU_TARGETS "${gpus}" CACHE STRING "AMD GPU targets to compile for" FORCE )
 endif()
 
-# Verify that hcc compiler is used on ROCM platform
+# Verify that hipcc compiler is used on ROCM platform
 # TODO: Fix VerifyCompiler for Windows
 if(NOT USE_HIP_CPU)
   if(NOT WIN32)
@@ -173,9 +173,7 @@ print_configuration_summary()
 # Tools
 add_subdirectory(tools)
 
-# rocRAND and hipRAND libraries
-# This adds library targets: rocrand, hiprand,
-# also includes Fortran wrapper
+# rocRAND library, adds library target "rocrand" and includes Fortran wrapper
 add_subdirectory(library)
 
 if(BUILD_TEST OR BUILD_BENCHMARK)
@@ -228,23 +226,6 @@ else()
 endif()
 
 set(ROCRAND_CONFIG_DIR "\${CPACK_PACKAGING_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" CACHE PATH "Path placed into ldconfig file")
-
-if(WIN32)
-    option(BUILD_HIPRAND "Build hipRAND as part of rocRAND" OFF)
-else()
-    option(BUILD_HIPRAND "Build hipRAND as part of rocRAND" ON)
-endif()
-if(BUILD_HIPRAND)
-    if(HIP_COMPILER STREQUAL "nvcc")
-        set(BUILD_WITH_LIB "CUDA")
-    endif()
-    if(EXISTS ${CMAKE_SOURCE_DIR}/hipRAND/CMakeLists.txt)
-        set(HIPRAND_SUBMODULE ON CACHE BOOL "Build hipRAND as a submodule of rocRAND." FORCE)
-        add_subdirectory(${CMAKE_SOURCE_DIR}/hipRAND ${CMAKE_BINARY_DIR}/hipRAND)
-    else()
-        message(FATAL_ERROR "BUILD_HIPRAND was set, but the hipRAND submodule could not be found. Use git submodule update --init to clone the hipRAND submodule, or set BUILD_HIPRAND to OFF (--no-hiprand flag for ./install)")
-    endif()
-endif()
 
 rocm_create_package(
     NAME ${package_name}
