--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
-# documentation files
+# Documentation files
 docs/* @saadrahim @LisaDelaney
 *.md  @saadrahim @LisaDelaney
 *.rst  @saadrahim @LisaDelaney
+# Header directory
 library/include/*  @saadrahim @LisaDelaney
