--- a/scripts/config-tuning/requirements.txt
+++ b/scripts/config-tuning/requirements.txt
@@ -12,6 +12,8 @@ fonttools==4.39.2
     # via matplotlib
 jinja2==3.1.2
     # via -r scripts/config-tuning/requirements.in
+json5==0.9.14
+    # via -r scripts/config-tuning/requirements.in
 kiwisolver==1.4.4
     # via matplotlib
 markupsafe==2.1.3
